# Pierogi-Entropii

./: .gitignore  CMakeLists.txt  Pierogi Entropii.sln  README.md  build.bat  run.bat
Pierogi Entropii/: Pierogi Entropii.c  Pierogi Entropii.vcxproj  Pierogi Entropii.vcxproj.filters  collectablesStrings.h  createCamera.h  drawMenuElement.c  drawMenuElement.h  endScreen.c  equipment.c  gridTile.c  gridTile.h  map.c  map.h  menu.c  play.c  player.c  player.h  state.h  textures.c  textures.h  time.c
Pierogi Entropii/stage/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
source/: isMouseInRange.h  state.h
source/additions/drawMenuElement/: drawMenuElement.c
source/cancelKey/: cancelKey.c  cancelKey.h
source/gridTile/: gridTile.c
source/map/: map.c
source/player/: player.c  player.h
source/stage/: endScreen.c  equipment.c  menu.c  pause.c  time.c
stage/: 1.txt  10.txt  12.txt  13.txt  14.txt  4.txt  6.txt  8.txt
